# Sorting-Visualization

./: .gitmodules  CONFIG.h  Entity.cpp  Entity.h  README.md  main.cpp  setup.bat
.github/workflows/: tests-build.yml
.github/workflows.yml/: tests.yml
Includes/: CONFIG.h  Entity.h  IUpdateBuffer.h  SortVisualizer.h  TextLog.h
SortingMenu/: pom.xml
SortingMenu/src/main/java/: module-info.java
SortingMenu/src/main/java/org/example/sortingmenu/: HelloApplication.java  HelloController.java  SetupController.java
SortingMenu/src/main/resources/org/example/sortingmenu/: hello-view.fxml  setup-wizard.fxml
SortingProgram/: CMakeLists.txt  main.cpp
SortingProgram/Includes/: AlgorithmType.h  App.h  BubbleSort.h  CONFIG.h  Entity.h  EntityManager.h  IEvents.h  ISoundListener.h  IUpdateBuffer.h  InsertionSort.h  ProjectConfig.h  QuickSort.h  SelectionSort.h  Sort.h  SortFactory.h  SortVisualizer.h  SoundManager.h  TextLog.h
SortingProgram/Source/: App.cpp  BubbleSort.cpp  Entity.cpp  EntityManager.cpp  InsertionSort.cpp  QuickSort.cpp  SelectionSort.cpp  Sort.cpp  SortFactory.cpp  SortVisualizer.cpp  SoundManager.cpp  TextLog.cpp
SortingProgram/Test/: AppTest.cpp  CMakeLists.txt  SortTest.cpp
Source/: App.cpp  ISoundListener.cpp  SortVisualizer.cpp  SoundManager.cpp  TextLog.cpp
